# demo-my-app

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: release.yml
wix/: main.wxs
